<resources>
    <string name="app_name">ContextSense</string>
    <string name="title_detect">Detection</string>
    <string name="title_sensing">Sensing</string>
    <string name="title_gps">Position</string>
    <string name="button_sensors">Show all sensors</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="send">Send</string>
    <string name="clear">Clear</string>
    <string name="switch_log">Save log</string>
    <string name="hint_initial">Please select a function using the navigator on bottom after permission checked. You can also look up available sensors here by clicking: </string>
    <string name="hint_detect">Press start button to detect the sensing context and user activity. You can give feedback by clicking on buttons on the left of wrong results.</string>
    <string name="hint_hierarchy">Hierarchical inference result:</string>
    <string name="hint_sensing">Press start button to enable the environmental sensing, then press stop button to save and mail the log (if checked). You can give 3 labels on data about the sensing context.</string>
    <string name="hint_gps">Press start button to turn on the GPS positioning system.</string>
    <string name="open_network">Discovering Wifi Direct neighbors providing services …</string>
    <string name="count_sensing">Sensing count: </string>
    <string name="feedback">Wrong!</string>
    <string name="in_pocket">In-Pocket</string>
    <string name="in_door">In-Door</string>
    <string name="under_ground">Under-Ground</string>
    <string name="out_pocket">Out-Pocket</string>
    <string name="out_door">Out-Door</string>
    <string name="on_ground">On-Ground</string>
    <string name="email_title">Sensing data collected from ContextSense</string>
    <string name="switch_mail">&amp; Mail log</string>
    <string name="notify_title">Inference Result</string>
    <string name="notify_content">…</string>
</resources>
