<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fr.inria.yifan.mysensor.SensingActivity">

    <TextView
        android:id="@+id/welcome_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:textSize="@dimen/font_size_normal" />

    <ListView
        android:id="@+id/list_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/scene_radios"
        android:layout_below="@id/welcome_view"
        android:transcriptMode="alwaysScroll" />

    <LinearLayout
        android:id="@+id/scene_radios"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/two_buttons"
        android:gravity="center"
        android:orientation="horizontal">

        <RadioGroup
            android:id="@+id/pocket_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/inpocket_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/in_pocket" />

            <RadioButton
                android:id="@+id/outpocket_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/out_pocket" />
        </RadioGroup>

        <RadioGroup
            android:id="@+id/door_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/indoor_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/in_door" />

            <RadioButton
                android:id="@+id/outdoor_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/out_door" />
        </RadioGroup>

        <RadioGroup
            android:id="@+id/ground_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/underground_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/under_ground" />

            <RadioButton
                android:id="@+id/onground_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/on_ground" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/two_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/three_buttons"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:gravity="center"
            android:orientation="vertical">

            <Switch
                android:id="@+id/switch_log"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_vertical_padding"
                android:text="@string/switch_log" />

            <Switch
                android:id="@+id/switch_mail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_vertical_padding"
                android:text="@string/switch_mail" />
        </LinearLayout>

        <Button
            android:id="@+id/start_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:text="@string/start"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/stop_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:text="@string/stop"
            tools:ignore="ButtonStyle" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/three_buttons"
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/background"
        android:orientation="horizontal">

        <Button
            android:id="@+id/detection_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawablePadding="@dimen/activity_vertical_padding"
            android:drawableTop="@drawable/green_square"
            android:onClick="goDetection"
            android:text="@string/title_detect" />

        <Button
            android:id="@+id/sensing_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clickable="false"
            android:drawablePadding="@dimen/activity_vertical_padding"
            android:drawableTop="@drawable/red_round"
            android:text="@string/title_sensing" />

        <Button
            android:id="@+id/network_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawablePadding="@dimen/activity_vertical_padding"
            android:drawableTop="@drawable/blue_square"
            android:onClick="goGPS"
            android:text="@string/title_gps" />
    </LinearLayout>

</RelativeLayout>