<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fr.inria.yifan.mysensor.InitializeActivity">

    <TextView
        android:id="@+id/welcome_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:textSize="@dimen/font_size_normal" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/welcome_view"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:onClick="goSensors"
        android:text="@string/button_sensors" />

    <LinearLayout
        android:id="@+id/three_buttons"
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/background"
        android:orientation="horizontal">

        <Button
            android:id="@+id/detection_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawablePadding="@dimen/activity_vertical_padding"
            android:drawableTop="@drawable/green_square"
            android:onClick="goDetection"
            android:text="@string/title_detect" />

        <Button
            android:id="@+id/sensing_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawablePadding="@dimen/activity_vertical_padding"
            android:drawableTop="@drawable/red_round"
            android:onClick="goSensing"
            android:text="@string/title_sensing" />

        <Button
            android:id="@+id/network_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawablePadding="@dimen/activity_vertical_padding"
            android:drawableTop="@drawable/blue_square"
            android:onClick="goGPS"
            android:text="@string/title_gps" />
    </LinearLayout>

</RelativeLayout>