<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fr.inria.yifan.mysensor.GPSActivity">

    <TextView
        android:id="@+id/welcome_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:textSize="@dimen/font_size_normal" />

    <TextView
        android:id="@+id/location_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/welcome_view"
        android:layout_marginStart="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_vertical_margin" />

    <LinearLayout
        android:id="@+id/two_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/three_buttons"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/start_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/activity_vertical_margin"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:text="@string/start"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/stop_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_vertical_margin"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:text="@string/stop"
            tools:ignore="ButtonStyle" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/three_buttons"
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/background"
        android:orientation="horizontal">

        <Button
            android:id="@+id/detection_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawablePadding="@dimen/activity_vertical_padding"
            android:drawableTop="@drawable/green_square"
            android:onClick="goDetection"
            android:text="@string/title_detect" />

        <Button
            android:id="@+id/sensing_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawablePadding="@dimen/activity_vertical_padding"
            android:drawableTop="@drawable/red_round"
            android:onClick="goSensing"
            android:text="@string/title_sensing" />

        <Button
            android:id="@+id/network_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clickable="false"
            android:drawablePadding="@dimen/activity_vertical_padding"
            android:drawableTop="@drawable/blue_square"
            android:text="@string/title_gps" />
    </LinearLayout>

</RelativeLayout>
